Update controllers and services with logs